--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -8,11 +8,11 @@
     android:padding="8dp"
     tools:context="com.example.nikkoekasaputra.testscreensuitmedia.MainActivity">
 
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/list_event"
-        android:orientation="vertical"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_guest"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:drawSelectorOnTop="true"/>
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
